--- a/config.yaml
+++ b/config.yaml
@@ -3,9 +3,11 @@ subject: 'cat:cs.*'
 
 # 検索キーワード
 keywords:
-        kaggle: 3
-        resnet: 3
-        anomaly detection: 1
+        unsupevised: 1
+        contrastive learning: 1
+        self-supervised: 1
+        Self-Supervised: 1
+        
 
 # 通知の閾値
 score_threshold: 0
