--- a/config.yaml
+++ b/config.yaml
@@ -9,10 +9,10 @@ keywords:
         Self-Supervised: 1
         Transformer: 1
         visualize: 1
-        state-of-the-art: 1
+#         state-of-the-art: 1
         augmentation: 1
         gan: 1
         generative: 1
 
 # 通知の閾値
-score_threshold: 0
+score_threshold: 2
