--- a/config.yaml
+++ b/config.yaml
@@ -3,13 +3,13 @@ subject: 'cat:cs.*'
 
 # 検索キーワード
 keywords:
+        bayesian optimisation: 1
+        bayesian optimization: 1
         unsupevised: 1
         contrastive learning: 1
         self-supervised: 1
-        Self-Supervised: 1
         Transformer: 1
         visualize: 1
-#         state-of-the-art: 1
         augmentation: 1
         gan: 1
         generative: 1
